2000-07-31  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/FconfigureCmd.java: Don't
	raise error when -buffering option is given,
	just silently do nothing for now.
	* src/jacl/tcl/lang/ReadCmd.java: Fix bug
	that caused channel open with r+ to not
	work with the read command.

2000-07-31  Christian Krone  <krischan@sql.de>

	* src/jacl/tcl/lang/Channel.java: Add refCount.
	* src/jacl/tcl/lang/CloseCmd.java (cmdProc):
	Use TclIO.unregisterChannel.
	* src/jacl/tcl/lang/FileChannel.java: Fix typos.
	* src/jacl/tcl/lang/OpenCmd.java: Fix typos.
	* src/jacl/tcl/lang/StdChannel.java (getChanName):
	Add getChanName method to StdChannel class.
	* src/jacl/tcl/lang/TclIO.java: Use refCount.

2000-07-29  Mo DeJong  <mdejong@redhat.com>

	* tests/tcljava/JavaLock.test: Use
	error string from Tcl 8.3 when a
	command is invoked with the incorrect
	number of arguments. Jacl does not
	yet generate a Tcl 8.3 compliant
	error in this case, so some of its
	regression tests will fail.

2000-07-29  Mo DeJong  <mdejong@redhat.com>

	* src/empty/empty.jar: Regen.
	* src/empty/tcl/lang/Interp.java:
	* src/jacl/tcl/lang/Interp.java:
	* src/native/javaInterp.c:
	* src/tclblend/tcl/lang/Interp.java:
	* src/tcljava/tcl/lang/ReflectObject.java:

2000-07-16  Christian Krone  <krischan@sql.de>

	* src/jacl/tcl/lang/ClockCmd.java: Upgrade
	Jacl's clock command to match Tcl 8.3.
	Even stardates are supported!
	* tests/tcl/clock.test: Upgrade to Tcl 8.3.

2000-07-13  Mo DeJong  <mdejong@redhat.com>

	* tcljava.m4: Add doublequotes around
	test variables that might be empty.

2000-07-13  Mo DeJong  <mdejong@redhat.com>

	* src/empty/empty.jar: Regen.
	* src/empty/tcl/lang/Interp.java:
	* src/jacl/tcl/lang/Interp.java:
	* src/tclblend/tcl/lang/Interp.java: Add conflict table variable.
	* src/tcljava/tcl/lang/ReflectObject.java: Overhaul reflect table
	implementation to avoid problem with object hash overlap in JDK
	1.2. We now use a second conflict table to store hash conflicts.
