@@ -1,3 +1,8 @@
+2000-08-19  Christian Krone  <krischan@sql.de>
+
+	* src/jacl/tcl/lang/BgErrorMgr.java: Use
+	Java style comments instead of C style ones.
+
 2000-07-31  Mo DeJong  <mdejong@redhat.com>
 
 	* src/jacl/tcl/lang/FconfigureCmd.java: Don't
